--- a/style/style.css
+++ b/style/style.css
@@ -46,4 +46,10 @@ form .display input{
 }
 form input.equal{
     width: 145px;
+    color: #33ffd8;
+}
+
+form input.operator{
+    color: #33ffd8;
+
 }
